src/objects/Participant__c.object
<CustomObject>
    <description>Status of the Organization&apos;s Participation in a Framework.</description>
    <fields>
        <fullName>Affirmation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affirmation</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Participation</relationshipLabel>
        <relationshipName>Participation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Stage__c</fullName>
        <label>Application Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claiming_Self_Verified__c</fullName>
        <label>Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Assessment</fullName>
                </value>
                <value>
                    <fullName>Outside Compliance Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_HR_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm HR Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayInActiveList__c</fullName>
        <formula>and(Framework__r.isActive__c, isPickVal( Status__c, &apos;Active&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayInActiveList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Framework__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Framework</label>
        <referenceTo>Framework__c</referenceTo>
        <relationshipName>Participation_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Status_Reason__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inactive Status Reason</label>
        <referenceTo>Inactive_Reason__c</referenceTo>
        <relationshipName>Participation_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_HR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-HR Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Participation</relationshipLabel>
        <relationshipName>Participation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Participation</relationshipLabel>
        <relationshipName>Participation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipName>Participations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Privacy_Programs__c</fullName>
        <label>Privacy Programs</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Framework__r.Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>The purpose of participating in this Framework.</description>
        <inlineHelpText>What is the intended use of the Framework by this Participant.</inlineHelpText>
        <label>Purpose</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Organizatin&apos;s Participation in a Framework.</description>
        <inlineHelpText>What is the Status of this Organization&apos;s Participation in the Framework?</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Method__c</fullName>
        <label>Self Verification Method</label>
        <summaryFilterItems>
            <field>Third_Party__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Verification Method</value>
        </summaryFilterItems>
        <summaryForeignKey>Third_Party__c.Participation_Status__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isSelfVerified__c</fullName>
        <formula>Verification_Method__c == 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Self Verified?</label>
        <type>Checkbox</type>
    </fields>
    <label>Participation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Participant__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Framework__c</columns>
        <columns>Program__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EU_US</fullName>
        <columns>NAME</columns>
        <columns>Participant__c</columns>
        <columns>Status__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Framework__c</field>
            <operation>equals</operation>
            <value>EU-U.S. Privacy Shield Framework</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>EU-U.S. Privacy Shield - Active List</label>
    </listViews>
    <listViews>
        <fullName>Privacy_Shield_New_Applications</fullName>
        <columns>NAME</columns>
        <columns>Participant__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Inactive_Status_Reason__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Privacy Shield - Application In Progress</label>
    </listViews>
    <listViews>
        <fullName>Privacy_Shield_Pending_Review</fullName>
        <columns>NAME</columns>
        <columns>Participant__c</columns>
        <columns>Application_Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Inactive_Status_Reason__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Stage__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Privacy Shield - Pending Review</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Inactive_Status_Reason_Is_Required</fullName>
        <active>true</active>
        <description>An Inactive Status Reason is required if the Status field has a value of &apos;Inactive&apos;</description>
        <errorConditionFormula>if( and(isPickVal(Status__c, &apos;Inactive&apos;), ISBLANK( Inactive_Status_Reason__c )), true, false)</errorConditionFormula>
        <errorDisplayField>Inactive_Status_Reason__c</errorDisplayField>
        <errorMessage>You must indicate the reason that this Organization is no longer participating in the Framework.</errorMessage>
    </validationRules>
</CustomObject>